# telegram-phone-number-checker

./: .gitignore  LICENSE  Pipfile  README.md  Telegram_phone_validation.py  pyproject.toml  requirements-dev.txt  requirements.txt  telegram-phone-validation.py
.github/workflows/: pypi-publish.yaml  run-pytest.yml
telegram_phone_number_checker/: dub.py  main.py  mainy.py  test.py
tests/: test_user_was_online.py
